--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
+clap-num = "1.2.0"
 chrono = "0.4.41"
 float-ord = "0.3.2"
 questdb-rs = { version = "4.0.4", features = ["chrono_timestamp"] }
+sd-notify = "0.4.5"
+simple_logger = "5.0.0"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.140"
 substring = "1.4.5"
+log = "0.4.27"
