--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "container-statsd"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2024"
 
 [dependencies]
@@ -9,10 +9,12 @@ clap-num = "1.2.0"
 chrono = "0.4.41"
 float-ord = "0.3.2"
 questdb-rs = { version = "4.0.4", features = ["chrono_timestamp"] }
-sd-notify = "0.4.5"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.140"
 signal-hook = "0.3.17"
 simple_logger = "5.0.0"
 substring = "1.4.5"
 log = "0.4.27"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+libsystemd = "0.7.2"
